# palantir

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  FEATURE-v2-ext-OLD.md  FEATURE-v2-ext.md  FEATURES-OLD.md  FEATURES.md  FEATURES_v2.md  FLOW.md  LICENSE  README.md  SPACEPORT_SK_APPLICATION_DECK.en.md  SPACEPORT_SK_PITCH.en.md  SPACEPORT_SK_PITCH.md  SPACEPORT_SK_PITCH_REVIEW.md  docker-compose.yaml  pdf-config-deck.js  pdf-config.js  pdf-style-deck.css  pdf-style.css  pom.xml
docs/: project-summary.md
docs/archive/: pitch-narratives-v2.md
palantir-core/: Dockerfile  pom.xml
palantir-core/src/test/resources/: application.yaml
src/main/java/io/github/jakubt4/palantir/dto/: TleRequest.java  (+4 more)
src/main/resources/: application.yaml
src/test/resources/: application.yaml
tools/palantir-analytics/: .gitignore  README.md  pyproject.toml  stations.example.yaml
tools/palantir-analytics/palantir_analytics/: __init__.py  __main__.py  cli.py  export.py  passes.py  plots.py  stations.py  yamcs_client.py
tools/palantir-analytics/tests/: test_export.py  test_passes.py  test_plots.py  test_stations.py  test_yamcs_client.py
tools/palantir-hmi/: .env.example  .gitignore  README.md  commands.html  index.html  package-lock.json  package.json  track.html  vite.config.js
tools/palantir-hmi/src/: commands.css  commands.js  dashboard.css  styles.css  track.css  track.js  yamcs-rest.js  yamcs-ws.js
yamcs/: Dockerfile
yamcs/etc/: processor.yaml  yamcs.palantir.yaml  yamcs.yaml
yamcs/mdb/: README.md  baseline.xml  palantir.xml
yamcs/mdb/features/: commands.xml
(+21 files in other folders)
